--- a/BUTTON CLICKED GAME - Kopie/style.css
+++ b/BUTTON CLICKED GAME - Kopie/style.css
@@ -32,6 +32,9 @@ input {
     background-color: beige;
     border: hidden;
     box-shadow: 0 9px #999;
+    font-size: 2em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 700;
 
 
 }
